--- a/package.json
+++ b/package.json
@@ -1,24 +1,34 @@
 {
 	"name": "@bkhurram/ui",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"description": "ui components",
 	"author": "Khurram Bashir",
 	"main": "dist/cjs/index.js",
 	"module": "dist/esm/index.js",
 	"types": "dist/index.d.ts",
-	"type": "module",
+	"type": "commonjs",
 	"files": [
 		"dist"
 	],
 	"scripts": {
-		"rollup": "rollup -c",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"build": "rollup -c",
+		"test": "jest"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.20.2",
+		"@babel/preset-env": "^7.20.2",
+		"@babel/preset-react": "^7.18.6",
+		"@babel/preset-typescript": "^7.18.6",
 		"@rollup/plugin-commonjs": "^23.0.2",
 		"@rollup/plugin-node-resolve": "^15.0.1",
 		"@rollup/plugin-typescript": "^9.0.2",
+		"@testing-library/react": "^13.4.0",
+		"@types/jest": "^29.2.2",
 		"@types/react": "^18.0.25",
+		"babel-jest": "^29.2.2",
+		"identity-obj-proxy": "^3.0.0",
+		"jest": "^29.2.2",
+		"jest-environment-jsdom": "^29.2.2",
 		"postcss": "^8.4.18",
 		"react": "^18.2.0",
 		"rollup": "^3.2.5",
