--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
 	"main": "dist/cjs/index.js",
 	"module": "dist/esm/index.js",
 	"types": "dist/index.d.ts",
-	"type": "commonjs",
 	"files": [
 		"dist"
 	],
 	"scripts": {
-		"build": "rollup -c",
+		"build": "rollup -c --environment BUILD:development --bundleConfigAsCjs",
+		"prod": "rollup -c --environment INCLUDE_DEPS,BUILD:production --bundleConfigAsCjs",
 		"test": "jest"
 	},
 	"devDependencies": {
@@ -21,6 +21,7 @@
 		"@babel/preset-typescript": "^7.18.6",
 		"@rollup/plugin-commonjs": "^23.0.2",
 		"@rollup/plugin-node-resolve": "^15.0.1",
+		"@rollup/plugin-terser": "^0.1.0",
 		"@rollup/plugin-typescript": "^9.0.2",
 		"@testing-library/react": "^13.4.0",
 		"@types/jest": "^29.2.2",
@@ -30,14 +31,17 @@
 		"jest": "^29.2.2",
 		"jest-environment-jsdom": "^29.2.2",
 		"postcss": "^8.4.18",
-		"react": "^18.2.0",
 		"rollup": "^3.2.5",
 		"rollup-plugin-dts": "^5.0.0",
+		"rollup-plugin-eslint": "^7.0.0",
 		"rollup-plugin-peer-deps-external": "^2.2.4",
 		"rollup-plugin-postcss": "^4.0.2",
-		"rollup-plugin-terser": "^7.0.2",
 		"tslib": "^2.4.1",
 		"typescript": "^4.8.4"
+	},
+	"peerDependencies": {
+		"react": ">=18.2.0",
+		"react-dom": ">=18.2.0"
 	},
 	"publishConfig": {
 		"registry": "https://npm.pkg.github.com/bkhurram"
