--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "outDir": "dist",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "emitDeclarationOnly": true,
+    "emitDeclarationOnly": true
   },
 	"exclude": [
     "dist",
