--- a/package.json
+++ b/package.json
@@ -20,13 +20,17 @@
 		"@babel/preset-react": "^7.18.6",
 		"@babel/preset-typescript": "^7.18.6",
 		"@rollup/plugin-commonjs": "^23.0.2",
+		"@rollup/plugin-eslint": "^9.0.1",
 		"@rollup/plugin-node-resolve": "^15.0.1",
 		"@rollup/plugin-terser": "^0.1.0",
 		"@rollup/plugin-typescript": "^9.0.2",
 		"@testing-library/react": "^13.4.0",
 		"@types/jest": "^29.2.2",
 		"@types/react": "^18.0.25",
+		"babel-eslint": "^10.1.0",
 		"babel-jest": "^29.2.2",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-react": "^7.31.10",
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^29.2.2",
 		"jest-environment-jsdom": "^29.2.2",
@@ -46,5 +50,8 @@
 	"publishConfig": {
 		"registry": "https://npm.pkg.github.com/bkhurram"
 	},
-	"license": "ISC"
+	"license": "ISC",
+	"dependencies": {
+		"eslint-plugin-jsx-a11y": "^6.6.1"
+	}
 }
